--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 
-<body>
+<body class="FAQ_Background">
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -56,7 +56,7 @@
           <div class="accordion" id="faqExample">
             <div class="card">
 
-              <div class="card-header p-2" id="headingOne">
+              <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne">
@@ -77,7 +77,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header p-2" id="headingTwo">
+              <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="false" aria-controls="collapseTwo">
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header p-2" id="headingThree">
+              <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header p-2" id="headingFour">
+              <div class="card-header" id="headingFour">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
@@ -150,7 +150,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header p-2" id="headingFive">
+              <div class="card-header" id="headingFive">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
@@ -175,7 +175,7 @@
                 </div>
               </div>
               <div class="card">
-                <div class="card-header p-2" id="headingSix">
+                <div class="card-header" id="headingSix">
                   <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                       data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
@@ -201,34 +201,35 @@
               </div>
             </div>
           </div>
-          <div class="card-header p-2" id="headingSeven">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven"
-                aria-expanded="false" aria-controls="collapseSix">
-                Q: Hoe laat kan ik inchecken?
-              </button>
-            </h5>
-          </div>
-          <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#faqExample">
-            <div class="card-body">
-              Check-in tijden kunnen variëren per hotel en van regio tot regio. In algemene zin zijn de kamers
-              beschikbaar tussen 12 en 14 uur. Wanneer je eerder aankomt heeft u wel de mogelijkheid om de bagage
-              achter
-              te laten voor enkele uren.
-
+          <div class="card">
+            <div class="card-header" id="headingSeven">
+              <h5 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven"
+                  aria-expanded="false" aria-controls="collapseSeven">
+                  Q: Hoe laat kan ik inchecken?
+                </button>
+              </h5>
+            </div>
+            <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#faqExample">
+              <div class="card-body">
+                Check-in tijden kunnen variëren per hotel en van regio tot regio. In algemene zin zijn de kamers
+                beschikbaar tussen 12 en 14 uur. Wanneer je eerder aankomt heeft u wel de mogelijkheid om de bagage
+                achter
+                te laten voor enkele uren.
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+</div>
 
-
-    <!--/row-->
+      <!--/row-->
 
 
   </main>
 
 </body>
+
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
 <footer id="faqFooterFix">
